# Realtime-SingleLidar

./: .gitignore  CMakeLists.txt  README.md  lidarMapManage.cpp  lidarMapManage.h  main.cpp
RSDecoder/ConfigrationFiles/: limit.csv
gridMap/: grid.h  gridMap.cpp  gridMap.h  gridMapManage.cpp  gridMapManage.h
groundPlaneCalibration/: groundPlaneCali.cpp  groundPlaneCali.h
groundSeg/: CMakeLists.txt  bin.cpp  bin.h  ground_segmentation.cpp  ground_segmentation.h  segment.cpp  segment.h  tobeused.cpp
lidarOdom/: featureExtraction.cpp  featureExtraction.h  lidarOdometry.cpp  lidarOdometry.h  pointCloudSeg.cpp  pointCloudSeg.h
objDetect/: objDetect.cpp  objDetect.h
paramFile/: gridMapParams.yaml  groundSegParams.yaml  objDetectParams.yaml  paramParse.cpp  paramParse.h  parameter.yaml
src/: lidarMapManage.cpp  lidarMapManage.h  main.cpp
utils/: channel.h  common.h  lidarMapQueue.h  lidarMap_t.h  pointCloudQueue.h  typeConvert.h
visualization/: visualize.cpp  visualize.h
